--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -19,11 +19,11 @@
         android:id="@+id/sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="20sp"
         android:text="@string/sign_up"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="233dp" />
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="167dp"
+        tools:layout_editor_absoluteY="237dp" />
 
     <EditText
         android:id="@+id/enterEmail"
@@ -54,5 +54,14 @@
         android:inputType="textPassword"
         tools:layout_editor_absoluteX="98dp"
         tools:layout_editor_absoluteY="456dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/sign_up"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="153dp"
+        tools:layout_editor_absoluteY="527dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
