login xml actually finished

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -36,7 +36,7 @@
         tools:layout_editor_absoluteY="283dp" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/enterPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -46,6 +46,7 @@
         tools:layout_editor_absoluteY="366dp" />
 
     <Button
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/login"
