--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -6,11 +6,20 @@
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
+    <ImageView
+        android:id="@+id/imageProfile"
+        android:layout_width="147dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="44dp"
+        android:src="@drawable/profile"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="16dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username:"
-        android:textSize="23"
+        android:textSize="23sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="43dp"
         tools:layout_editor_absoluteY="155dp" />
@@ -19,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email:"
-        android:textSize="23"
+        android:textSize="23sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="43dp"
         tools:layout_editor_absoluteY="225dp" />
@@ -28,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name:"
-        android:textSize="23"
+        android:textSize="23sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="43dp"
         tools:layout_editor_absoluteY="295dp" />
@@ -37,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Surname:"
-        android:textSize="23"
+        android:textSize="23sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="43dp"
         tools:layout_editor_absoluteY="370dp" />
@@ -46,9 +55,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BirthDate:"
-        android:textSize="23"
+        android:textSize="23sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="445dp" />
+        tools:layout_editor_absoluteY="444dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
+    <fragment
+        android:id="@+id/nav_host_fragment_activity_main"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:navGraph="@navigation/mobile_navigation" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
