--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -15,9 +15,9 @@
             android:id="@+id/imageProfile"
             android:layout_width="147dp"
             android:layout_height="100dp"
-            android:src="@drawable/profile"
+            android:src="@drawable/baseline_person_24"
             android:layout_marginTop="70dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginLeft="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/Username"/>
