--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".ui.Groups.GroupsFragment"
     android:background="@drawable/background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imageProfile"
+            android:layout_width="147dp"
+            android:layout_height="100dp"
+            android:src="@drawable/baseline_groups_24"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/linearLayout"/>
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -17,16 +28,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageProfile">
 
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:text="Groups"
+                android:text="Your groups"
                 android:textAllCaps="true"
-                android:textSize="50dp"
+                android:textSize="30dp"
                 android:textColor="#FFFFFF"
                 android:textAlignment="center"/>
 
@@ -36,10 +47,10 @@
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:padding="@dimen/activity_horizontal_margin"
-                android:text="5B"
+                android:text="Classe 5B"
                 android:textColor="@color/black"
                 tools:ignore="HardcodedText"
-                android:textSize="30dp"
+                android:textSize="25dp"
                 android:textAlignment="center"/>
 
             <TextView
@@ -48,14 +59,26 @@
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:padding="@dimen/activity_horizontal_margin"
-                android:text="3A"
+                android:text="Classe 3A"
                 android:textColor="@color/black"
                 tools:ignore="HardcodedText"
-                android:textSize="30dp"
+                android:textSize="25dp"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:padding="@dimen/activity_horizontal_margin"
+                android:text="anno 2007 Martellago"
+                android:textColor="@color/black"
+                tools:ignore="HardcodedText"
+                android:textSize="25dp"
                 android:textAlignment="center"/>
 
         </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
