--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -15,12 +15,12 @@
             android:id="@+id/logo"
             android:layout_width="341dp"
             android:layout_height="163dp"
-            android:src="@drawable/logo"
             android:layout_marginTop="50dp"
+            android:src="@drawable/logo"
+            app:layout_constraintBottom_toTopOf="@id/login_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/login_text"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/login_text"
