--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Groups.GroupsFragment"
+    tools:context=".ui.notifications.NotificationsFragment"
     android:background="@drawable/background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
             android:id="@+id/imageProfile"
             android:layout_width="147dp"
             android:layout_height="100dp"
-            android:src="@drawable/baseline_groups_24"
+            android:src="@drawable/ic_chat"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -35,7 +35,7 @@
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:text="Your groups"
+                android:text="Your chats"
                 android:textAllCaps="true"
                 android:textSize="30dp"
                 android:textColor="#FFFFFF"
@@ -47,22 +47,10 @@
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:padding="@dimen/activity_horizontal_margin"
-                android:text="Classe 5B"
+                android:text="Mario Rossi (Classe 5B)"
                 android:textColor="@color/black"
                 tools:ignore="HardcodedText"
-                android:textSize="25dp"
-                android:textAlignment="center"/>
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:padding="@dimen/activity_horizontal_margin"
-                android:text="Classe 3A"
-                android:textColor="@color/black"
-                tools:ignore="HardcodedText"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textAlignment="center"/>
 
             <TextView
@@ -71,10 +59,10 @@
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:padding="@dimen/activity_horizontal_margin"
-                android:text="anno 2007 Martellago"
+                android:text="Lucia Bianchi (anno 2007 Martellago)"
                 android:textColor="@color/black"
                 tools:ignore="HardcodedText"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textAlignment="center"/>
 
         </LinearLayout>
