--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.family_share_extension.ui.Profile.HomeFragment"
+        android:name="com.example.myapplication.ui.home.HomeFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.family_share_extension.ui.Chats.DashboardFragment"
+        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
         android:label="@string/title_groups"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.family_share_extension.ui.Groups.NotificationsFragment"
+        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
         android:label="@string/title_chats"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
