--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,20 @@
             app:layout_constraintRight_toRightOf="parent"/>
 
         <TextView
+            android:id="@+id/profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Profile"
+            android:textAllCaps="true"
+            android:textSize="30dp"
+            android:textColor="#FFFFFF"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/imageProfile"
+            app:layout_constraintBottom_toTopOf="@id/Username"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <TextView
             android:id="@+id/Username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,7 +45,7 @@
             android:layout_marginTop="25dp"
             android:layout_marginLeft="50dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageProfile"
+            app:layout_constraintTop_toBottomOf="@+id/profile"
             app:layout_constraintBottom_toTopOf="@id/Email"/>
 
         <TextView
