--- a/app/src/main/res/layout/announcement.xml
+++ b/app/src/main/res/layout/announcement.xml
@@ -1,110 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_marginVertical="5dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/announcementIcon"
+        android:layout_width="140dp"
+        android:layout_height="110dp"
+        android:src="@drawable/ic_image_missing"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+    <TextView
+        android:id="@+id/annoncementTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Error 404"
+        android:textSize="25dp"
+        app:layout_constraintLeft_toRightOf="@+id/announcementIcon"
+        app:layout_constraintTop_toTopOf="@+id/announcementIcon"/>
 
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:text="Announcement List"
-                android:textStyle="bold"
-                android:textAllCaps="true"
-                android:textSize="30dp"
-                android:textColor="#FFFFFF"
-                android:textAlignment="center"/>
+    <TextView
+        android:id="@+id/annoncementDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Error 404"
+        android:textSize="15dp"
+        app:layout_constraintLeft_toRightOf="@+id/announcementIcon"
+        app:layout_constraintTop_toBottomOf="@+id/annoncementTitle"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_marginVertical="10dp"
-                >
-
-                <ImageView
-                    android:id="@+id/icon"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/chair" />
-
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:padding="@dimen/activity_horizontal_margin"
-                    android:text="Chair"
-                    android:textColor="@color/black"
-                    tools:ignore="HardcodedText"
-                    android:textSize="30dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_marginVertical="10dp">
-
-                <ImageView
-                    android:id="@+id/icon2"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/table" />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:padding="@dimen/activity_horizontal_margin"
-                    android:text="Table"
-                    android:textColor="@color/black"
-                    tools:ignore="HardcodedText"
-                    android:textSize="30dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_marginVertical="10dp">
-
-                <ImageView
-                    android:id="@+id/icon3"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/books" />
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:padding="@dimen/activity_horizontal_margin"
-                    android:text="Books"
-                    android:textColor="@color/black"
-                    tools:ignore="HardcodedText"
-                    android:textSize="30dp"/>
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
