--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -26,7 +26,7 @@
             android:id="@+id/title"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:text="Example Group"
+            android:text="Title"
             android:textAllCaps="true"
             android:textSize="30dp"
             android:textColor="#FFFFFF"
