--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -46,13 +46,13 @@
 
         <TextView
             android:id="@+id/annoncementDescription"
-            android:layout_width="wrap_content"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Description"
-            android:textSize="20dp"
+            android:text="Description prova prova prova prova prova prova prova prova"
+            android:textSize="17dp"
             app:layout_constraintTop_toBottomOf="@id/announcementTitle"
-            app:layout_constraintLeft_toRightOf="@id/announcementIcon"/>
+            app:layout_constraintLeft_toRightOf="@id/announcementIcon"
+            app:layout_constraintRight_toRightOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
