--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -37,7 +37,7 @@
 
         <LinearLayout
             android:id="@+id/announcementList"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="10dp"
@@ -56,8 +56,10 @@
             android:padding="15dp"
             android:backgroundTint="@color/design_default_color_secondary"
             android:drawableTint="@color/design_default_color_secondary"
-            android:layout_marginVertical="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="100dp"
             app:layout_constraintTop_toBottomOf="@id/announcementList"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"/>
 
