--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
             android:id="@+id/logo"
             android:layout_width="341dp"
             android:layout_height="163dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginVertical="20dp"
             android:src="@drawable/logo"
             app:layout_constraintBottom_toTopOf="@id/login_text"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -28,7 +28,7 @@
             android:text="@string/login"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginTop="50dp"
+            android:layout_marginVertical="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/logo"
@@ -41,7 +41,7 @@
             android:ems="10"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:layout_marginTop="20dp"
+            android:layout_marginVertical="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_text"
@@ -54,7 +54,7 @@
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:layout_marginTop="20dp"
+            android:layout_marginVertical="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/enterEmail"
@@ -67,7 +67,7 @@
             android:hint="@string/login"
             android:textSize="16dp"
             android:textStyle="bold"
-            android:layout_marginTop="40dp"
+            android:layout_marginVertical="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/enterPassword"
@@ -81,7 +81,7 @@
             android:textSize="17dp"
             android:textColor="@color/design_default_color_secondary"
             android:textAlignment="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/loginButton"
